0026710: Coding rules - eliminate GCC warning -Wunused-result in Voxel_Reader.cxx